--- a/views/staff/listCust.handlebars
+++ b/views/staff/listCust.handlebars
@@ -12,14 +12,14 @@
                             href="https://datatables.net">official DataTables documentation</a>.</p> --}}
 
                     <!-- DataTales Example -->
-                    <div class="card shadow mb-4">
-                        <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Customer List</h6>
+                    <div class="card shadow mb-4"  >
+                        <div class="card-header py-3" style="background-color:#8BAD97;">
+                            <h6 class="m-0 font-weight-bold" style="color:white;">Customer List</h6>
                         </div>
-                        <div class="card-body">
-                            <div class="table-responsive">
+                        <div class="card-body" >
+                            <div class="table-responsive" >
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
+                                    <thead style="background-color: #F1EDE5;">
 
                                         <tr>
                                             <th>&nbsp;ID</th>
