capitalization of form

--- a/views/layouts/staffMain.handlebars
+++ b/views/layouts/staffMain.handlebars
@@ -35,6 +35,8 @@
     {{{body}}}
     {{> _staffFooter }}
 
+	<script src="/js/common.js"></script>
+
     <!-- Bootstrap core JavaScript-->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
