--- a/views/user/register.handlebars
+++ b/views/user/register.handlebars
@@ -7,11 +7,11 @@
 				<div>
 					<div class="form-group left spacing1">
 						<label for="firstname">First Name</label>
-						<input type="text" class="form-control" name="firstname" onblur="initialiseText()" value="{{firstname}}" required >
+						<input type="text" class="form-control" name="firstname" id="firstname" onblur="initialiseFirstname()" value="{{firstname}}" required >
 					</div>
 					<div class="form-group left spacing2">
 						<label for="lastname">Last Name</label>
-						<input type="text" class="form-control" name="lastname" value="{{lastname}}" required>
+						<input type="text" class="form-control" name="lastname" id="lastname" onblur="initialiseLastname()" value="{{lastname}}" required>
 					</div>
 					<div class="form-group clear left spacing1">
 						<label for="username">Username</label>
@@ -23,7 +23,7 @@
 					</div>
 					<div class="form-group clear left spacing1">
 						<label for="address">Address</label>
-						<input type="text" class="form-control" name="address" value="{{address}}" required>
+						<input type="text" class="form-control" name="address" id="address" onblur="initialiseAddress()" value="{{address}}" required>
 					</div>
 					<div class="form-group left spacing2">
 						<label for="email">Email</label>
