--- a/views/product/addProduct.handlebars
+++ b/views/product/addProduct.handlebars
@@ -24,19 +24,19 @@
 						<label class="font-italic">Pack Size</label>
 						<br>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="25" value="25" name="classification" checked>
+							<input class="form-check-input" type="radio" id="25" value="25" name="size">
 							<label class="form-check-label" for="25">25</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="50" value="50" name="classification">
+							<input class="form-check-input" type="radio" id="50" value="50" name="size">
 							<label class="form-check-label" for="50">50</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="75" value="75" name="classification">
+							<input class="form-check-input" type="radio" id="75" value="75" name="size">
 							<label class="form-check-label" for="75">75</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="100" value="100" name="classification">
+							<input class="form-check-input" type="radio" id="100" value="100" name="size">
 							<label class="form-check-label" for="100">100</label>
 						</div>
 					</div>
