--- a/views/product/editProduct.handlebars
+++ b/views/product/editProduct.handlebars
@@ -12,28 +12,28 @@
 				<div class="row mb-2">
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
                         <label class="font-italic" for="stock">Stock</label>
-                        <input class="form-control" type="number" id="stock" name="stock" {{stock}} required/>
+                        <input class="form-control" type="number" id="stock" name="stock"  value="{{product.stock}}" required />
 					</div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                         <label class="font-italic">Pack Size</label>
                         <br>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="25" value="25" name="classification" 
-                            {{radioCheck product.size "25" }} checked>
+                            <input class="form-check-input" type="radio" id="25" value="25" name="size" 
+                            {{radioCheck product.size "25" }}>
                             <label class="form-check-label" for="25">25</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="50" value="50" name="classification"
+                            <input class="form-check-input" type="radio" id="50" value="50" name="size"
                             {{radioCheck product.size "50" }}>
                             <label class="form-check-label" for="50">50</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="75" value="75" name="classification"
+                            <input class="form-check-input" type="radio" id="75" value="75" name="size"
                             {{radioCheck product.size "75" }}>
                             <label class="form-check-label" for="75">75</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="100" value="100" name="classification"
+                            <input class="form-check-input" type="radio" id="100" value="100" name="size"
                             {{radioCheck product.size "100" }}>
                             <label class="form-check-label" for="100">100</label>
                         </div>
@@ -42,10 +42,10 @@
 			</div>
 
 			<div class="form-group">
-				<div class="row">                    
+				<div class="row">                   
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
 						<label class="font-italic" for="price">Price</label>
-						<input class="form-control" type="text" id="price" name="price" {{price}} required/>
+						<input class="form-control" type="text" id="price" name="price"  value="{{product.price}}" required/>
 					</div>
 					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
 						<label class="font-italic">Category</label>
