--- a/views/product/listProducts.handlebars
+++ b/views/product/listProducts.handlebars
@@ -30,7 +30,7 @@
 					<div class="col-sm-12 col-md-12 col-lg-2">
 						<p class="font-italic">Category</p>
 						<p class="text-info">
-							{{category}}
+							{{replaceCommas category}}
 						</p>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-2">
@@ -46,20 +46,6 @@
 								Delete
 							</a>
 						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="accordion" id="storyAccordion">
-				<div class="card-header" id="headingOne">
-					<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
-						aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
-						Story <i class="fas fa-chevron-down"></i>
-					</button>
-				</div>
-				<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
-					<div class="card-body">
-						Story
 					</div>
 				</div>
 			</div>
