--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -22,6 +22,7 @@
 
         <div class="row">
             <div class="col-md-3">
+                <form action="" method="POST">
                 <figure class="card card-product-grid">
                     <div class="img-wrap">
                         <span class="badge badge-danger"> NEW </span>
@@ -56,9 +57,10 @@
 
                         <a href="#" class="btn btn-outline-primary"> <i class="fa fa-envelope"></i> Contact supplier
                         </a>
-
+                        <button id="btnSubmit" type="submit" class="btn btn-primary">Add to Cart</button>
                     </figcaption>
                 </figure>
+                </form>
             </div> <!-- col.// -->
 
             <div class="col-md-3">
