--- a/views/staff/editCust.handlebars
+++ b/views/staff/editCust.handlebars
@@ -7,11 +7,11 @@
                 <div>
                     <div class="form-group left spacing1">
                         <label for="firstname">First Name</label>
-						<input type="text" class="form-control" name="firstname" value="{{user.firstname}}" required>
+						<input type="text" class="form-control" name="firstname" value="{{user.firstname}}" id="firstname" onblur="initialiseFirstname()" required>
                     </div>
                     <div class="form-group left spacing2">
                        <label for="lastname">Last Name</label>
-						<input type="text" class="form-control" name="lastname" value="{{user.lastname}}" required>
+						<input type="text" class="form-control" name="lastname" value="{{user.lastname}}" id="lastname" onblur="initialiseLastname()" required>
                     </div>
                     <div class="form-group left spacing1">
                        <label for="username">Username</label>
@@ -24,7 +24,7 @@
 
                     <div class="form-group clear left spacing1">
                        <label for="address">Address</label>
-						<input type="text" class="form-control" name="address" value="{{user.address}}" required>
+						<input type="text" class="form-control" name="address" value="{{user.address}}" id="address" onblur="initialiseAddress()" required>
                     </div>
 
                     <div class="form-group left spacing2">
