--- a/views/staff/editStaff.handlebars
+++ b/views/staff/editStaff.handlebars
@@ -7,25 +7,27 @@
                 <div>
                     <div class="form-group left spacing1">
                         <label for="firstname">Staff Number</label>
-						<input type="text" class="form-control" name="staffno" value="{{staff.staffno}}" required>
+						<input type="text" class="form-control" name="staffno" value="{{staff.staffno}}"  required>
                     </div>
 
                     <div class="form-group left spacing2">
-                        <label for="firstname">First Name</label>
-						<input type="text" class="form-control" name="firstname" value="{{staff.firstname}}" required>
+                        <label for="username">Username</label>
+						<input type="text" class="form-control" name="username" value="{{staff.username}}" required>
+                       
                     </div>
                     <div class="form-group left spacing1">
-                       <label for="lastname">Last Name</label>
-						<input type="text" class="form-control" name="lastname" value="{{staff.lastname}}" required>
+                         <label for="firstname">First Name</label>
+						<input type="text" class="form-control" name="firstname" value="{{staff.firstname}}" id="firstname" onblur="initialiseFirstname()" required>
+                       
                     </div>
                     <div class="form-group left spacing2">
-                       <label for="username">Username</label>
-						<input type="text" class="form-control" name="username" value="{{staff.username}}" required>
+                       <label for="lastname">Last Name</label>
+						<input type="text" class="form-control" name="lastname" value="{{staff.lastname}}" id="lastname" onblur="initialiseLastname()" required>
                     </div>
 
                     <div class="form-group left spacing1">
                        <label for="email">Email</label>
-						<input type="email" name="email" class="form-control" value="{{user.email}}" required>
+						<input type="email" name="email" class="form-control" value="{{staff.email}}" required>
                     </div>
                     <div class="form-group left spacing2">
                        <label for="password">Password</label>
