--- a/views/staff/register.handlebars
+++ b/views/staff/register.handlebars
@@ -2,7 +2,7 @@
     <div class="col-md-6 mx-auto">
         <div class="card card-body" style="border-radius: 60px ; top: 20px">
             <img class="logo2 cen2" src="/img/whitelogo.png">
-            <h3 class="text-center" style="padding-top: 15px;">STAFF REGISTER</h3>
+            <h3 class="text-center" style="padding-top: 15px;">ADD STAFF</h3>
             <form action="" method="post">
                 <div>
                     <div class="form-group left spacing1">
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class=" left spacing2" style="padding-top:25px; padding-left:45px">
-                    <button type="submit" class="staffbtn" >REGISTER</button>
+                    <button type="submit" class="staffbtn" >ADD STAFF</button>
                 </div>
 
             </form>
