--- a/views/staff/listCust.handlebars
+++ b/views/staff/listCust.handlebars
@@ -1,88 +1,79 @@
-{{!-- <div class="container besidenav" style="padding-left:70px; width:max-content;"> --}}
-<head>
-    <script language="javascript">
-    function delcfm() {
-        if (!confirm("确认要删除？")) {
-            window.event.returnValue = false;
-        }
-    }
-</script>
-</head>
+<body>
+    <div>{{!-- <div style="background-color: #F1EDE5;"> --}}
+            {{#if users}}
+            <div class="container-fluid">
 
-    <body>
-        <div>{{!-- <div style="background-color: #F1EDE5;"> --}}
-                {{#if users}}
-                <div class="container-fluid">
+                <!-- Page Heading -->
+                {{!-- <h1 class="h3 mb-2 text-gray-800">Tables</h1>
+                <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
+                    For more information about DataTables, please visit the <a target="_blank"
+                        href="https://datatables.net">official DataTables documentation</a>.</p> --}}
 
-                    <!-- Page Heading -->
-                    {{!-- <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-                    <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
-                        For more information about DataTables, please visit the <a target="_blank"
-                            href="https://datatables.net">official DataTables documentation</a>.</p> --}}
-
-                    <!-- DataTales Example -->
-                    <div class="card shadow mb-4"  >
-                        <div class="card-header py-3" style="background-color:#8BAD97;">
-                            <h6 class="m-0 font-weight-bold" style="color:white;">Customer List</h6>
-                        </div>
-                        <div class="card-body" >
-                            <div class="table-responsive" >
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead style="background-color: #F1EDE5;">
-
-                                        <tr>
-                                            <th>&nbsp;ID</th>
-                                            <th>&nbsp;Name</th>
-                                            <th>&nbsp;Username</th>
-                                            <th>&nbsp;Email</th>
-                                            <th>&nbsp;Address</th>
-                                            <th>&nbsp;Action</th>
-                                        </tr>
-                                    </thead>
-                                    {{#each users}}
+                <!-- DataTales Example -->
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3" style="background-color:#8BAD97;">
+                        <h6 class="m-0 font-weight-bold" style="color:white;">Customer List</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <thead style="background-color: #F1EDE5;">
 
                                     <tr>
-                                        <td>&nbsp;{{id}}</td>
-                                        <td>&nbsp;{{firstname}}&nbsp;{{lastname}}</td>
-                                        <td>&nbsp;{{username}}</td>
-                                        <td>&nbsp;{{email}}</td>
-                                        <td>&nbsp;{{address}}</td>
-                                        <td>
-                                            <div>
-                                                <a href="/staff/editCust/{{id}}" class="card-link mb-2"
-                                                    style="color: #8BAD97">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                    Edit
-                                                </a>
-                                            </div>
-                                            <div>
-                                                <a href="/staff/deleteaccount/{{id}}" class="card-link"
-                                                    style="color: darkred" data-toggle="confirmation"
-                                                    data-title="Confirm delete?" onclick="delcfm();">
-                                                    <i class="far fa-trash-alt"></i>
-                                                    Delete
-                                                </a>
-                                            </div>
-                                        </td>
+                                        <th>&nbsp;ID</th>
+                                        <th>&nbsp;Name</th>
+                                        <th>&nbsp;Username</th>
+                                        <th>&nbsp;Email</th>
+                                        <th>&nbsp;Address</th>
+                                        <th>&nbsp;Action</th>
                                     </tr>
+                                </thead>
+                                {{#each users}}
+
+                                <tr>
+                                    <td>&nbsp;{{id}}</td>
+                                    <td>&nbsp;{{firstname}}&nbsp;{{lastname}}</td>
+                                    <td>&nbsp;{{username}}</td>
+                                    <td>&nbsp;{{email}}</td>
+                                    <td>&nbsp;{{address}}</td>
+                                    <td>
+                                        <div>
+                                            <a href="/staff/editCust/{{id}}" class="card-link mb-2"
+                                                style="color: #8BAD97">
+                                                <i class="fas fa-pencil-alt"></i>
+                                                Edit
+                                            </a>
+                                        </div>
+                                        <div>
+                                            <a href="/staff/deleteaccount/{{id}}" class="card-link"
+                                                style="color: darkred" data-toggle="confirmation"
+                                                data-title="Confirm delete?">
+                                                <i class="far fa-trash-alt"></i>
+                                                Delete
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
 
 
-                                    {{/each}}
-                                </table>
-                            </div>
+                                {{/each}}
+                            </table>
                         </div>
                     </div>
-
                 </div>
 
             </div>
 
-            {{else}}
-            <h3>No Customer</h3>
-            {{/if}}
-    </body>
-    <script>
-        $('[data-toggle=confirmation]').confirmation({
-            rootSelector: '[data-toggle=confirmation]',
-        });
-    </script>
+        </div>
+
+        {{else}}
+        <h3 class="m-0 font-weight-bold" style="padding-left:20px ;">No Customer</h6>
+    </div>
+    {{/if}}
+</body>
+
+<script>
+    $('[data-toggle=confirmation]').confirmation({
+        rootSelector: '[data-toggle=confirmation]',
+    });
+</script>
