--- a/views/booking/editBooking.handlebars
+++ b/views/booking/editBooking.handlebars
@@ -6,25 +6,28 @@
 				<div class="row mb-2">
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
 						<label class="font-italic" for="name">Name</label>
-						<input class="form-control" id="name" name="name" onblur="initialiseName()" required />
+						<input class="form-control" id="name" name="name" 
+                        value="{{booking.name}}" onblur="initialiseName()" required />
 					</div>
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
 						<label class="font-italic">Date</label>
-						<input id="datepicker" width="200" name="dateRelease" required/>
+						<input id="datepicker" width="200" name="datepicker"
+                        value="{{formatDate booking.dateRelease 'DD/MM/YYYY'}}" required/>
 					</div>
 				</div>
 			</div>
-
 
 			<div class="form-group">
 				<div class="row mb-2">
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
                         <label class="font-italic" for="email">Email</label>
-                        <input class="form-control" id="email" name="email" type="email" required />
+                        <input class="form-control" id="email" name="email" type="email" 
+                        value="{{booking.email}}" required />
 					</div>	
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
 						<label class="font-italic" for="contactno">Contact No.</label>
-						<input class="form-control" id="contactno" name="contactno" type="text" required />
+						<input class="form-control" id="contactno" name="contactno" type="text" 
+                        value="{{booking.contactno}}" required />
 					</div>	
                 </div>	
 			</div>
@@ -33,15 +36,18 @@
                 <label class="font-italic" for="service">Service</label>
                 <br>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="consultation" value="consultation" name="service">
+                    <input class="form-check-input" type="radio" id="consultation" value="consultation" 
+                    name="service" {{radioCheck booking.service "Consultation"}}>
                     <label class="form-check-label" for="consultation">Consultation</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="cupping" value="cupping" name="service">
+                    <input class="form-check-input" type="radio" id="cupping" value="cupping" 
+                    name="service" {{radioCheck booking.service "Cupping"}}>
                     <label class="form-check-label" for="cupping">Cupping</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="acupuncture" value="acupuncture" name="service">
+                    <input class="form-check-input" type="radio" id="acupuncture" value="acupuncture" 
+                    name="service" {{radioCheck booking.service "Acupuncture"}}>
                     <label class="form-check-label" for="acupuncture">Acupuncture</label>
                 </div>
 			</div>
