--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -56,6 +56,12 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/booking/listBookings">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>Booking</span>
+                </a>
+            </li>
             <!-- Heading -->
             <div class="sidebar-heading">
                 Interface
