--- a/views/cart/editorder.handlebars
+++ b/views/cart/editorder.handlebars
@@ -8,9 +8,9 @@
 				<input class="form-control" id="title" name="title" value="{{video.title}}" />
 			</div>
 			<div class="form-group mb-4">
-				<label class="font-italic" for="story">Story</label>
-				<textarea class="form-control" id="story" name="story" rows="7"
-					maxlength="2000">{{video.story}}</textarea>
+				<label class="font-italic" for="amount">Amount</label>
+				<input class="form-control" id="amount" name="amount" rows="7"
+					maxlength="2000">{{order.amount}}</input>
 			</div>
 
 			<div class="form-group">
