--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -57,6 +57,8 @@
 
                         <a href="#" class="btn btn-outline-primary"> <i class="fa fa-envelope"></i> Contact supplier
                         </a>
+                        <input type="hidden" name="user_id" value="{{id}}">
+                        <input type="hidden" name="amount" value="{{amount}}">
                         <button id="btnSubmit" type="submit" class="btn btn-primary">Add to Cart</button>
                     </figcaption>
                 </figure>
