fixed delete + add staff linking

--- a/views/staff/listStaff.handlebars
+++ b/views/staff/listStaff.handlebars
@@ -14,7 +14,8 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3" style="background-color:#8BAD97;">
-                            <h6 class="m-0 font-weight-bold" style="color:white;">Staff List</h6>
+                            <h5 class="m-0 font-weight-bold" style="color:white;">Staff List <a href="/staff/register" class="card-link mb-2" style="color:#F1EDE5; float:right; padding-right:40px; font-size:large"><i class="fa-solid fa-user-plus"></i> Add Staff</a></h5>
+                            
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
