--- a/views/staff/register.handlebars
+++ b/views/staff/register.handlebars
@@ -1,6 +1,7 @@
 <div class="row">
+     <a href="/staff/listStaff" style="color: grey ;float:left; padding-left:40px; font-size:large" ><u> <i class="fa-solid fa-chevron-left"></i>Back</u></a>
     <div class="col-md-6 mx-auto">
-        <div class="card card-body" style="border-radius: 60px ; top: 20px">
+        <div class="card card-body" style="border-radius: 60px ; top: 20px; right:40px;">
             <img class="logo2 cen2" src="/img/whitelogo.png">
             <h3 class="text-center" style="padding-top: 15px;">ADD STAFF</h3>
             <form action="" method="post">
