--- a/views/quiz/quizResult.handlebars
+++ b/views/quiz/quizResult.handlebars
@@ -2,6 +2,76 @@
 
 <br>
 
+<div class="card shadow mb-4">
+    <div class="card-header py-3" style="background-color:#8BAD97;">
+        <h6 class="m-0 font-weight-bold" style="color:white;">Quiz Answers</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead style="background-color: #F1EDE5;">
+
+                    <tr>
+                        <th>Question</th>
+                        <th>Answer</th>
+                    </tr>
+                </thead>
+
+                <tr>
+                    <td>Quiz Name</td>
+                    <td>{{quizzes.quizName}}</td>
+                </tr>
+
+                <tr>
+                    <td>Gender</td>
+                    <td>{{quizzes.gender}}</td>
+                </tr>
+
+                <tr>
+                    <td>Age</td>
+                    <td>{{quizzes.age}}</td>
+                </tr>
+
+                <tr>
+                    <td>TCM knowledge</td>
+                    <td>{{quizzes.tcm}}</td>
+                </tr>
+
+                <tr>
+                    <td>Supplements/ TCM intake</td>
+                    <td>{{quizzes.supplements}}</td>
+                </tr>
+
+                <tr>
+                    <td>Health area to improve</td>
+                    <td>{{quizzes.area}}</td>
+                </tr>
+
+                <tr>
+                    <td>Diet</td>
+                    <td>{{quizzes.diet}}</td>
+                </tr>
+
+                <tr>
+                    <td>On medication?</td>
+                    <td>{{quizzes.medication}}</td>
+                </tr>
+
+                <tr>
+                    <td>Allergies?</td>
+                    <td>{{quizzes.allergy}}</td>
+                </tr>
+
+                <tr>
+                    <td>Smoke?</td>
+                    <td>{{quizzes.smoke}}</td>
+                </tr>
+
+            </table>
+        </div>
+    </div>
+</div>
+
 <div class="card-deck">
     <div class="card ser-col">
         <div class="card-body">
