--- a/views/cart/cart.handlebars
+++ b/views/cart/cart.handlebars
@@ -56,7 +56,7 @@
                 <div class="container" style="text-align: center;">
                     <div class="row">
                         <p class="font-italic col-sm-3 col-md-3 col-lg-3">Name</p>
-                        <p class="font-italic col-sm-3 col-md-3 col-lg-3">Amount</p>
+                        <p class="font-italic col-sm-3 col-md-3 col-lg-3">Quantity</p>
                         <p class="font-italic col-sm-3 col-md-3 col-lg-3">Price</p>
                         <p class="font-italic col-sm-3 col-md-3 col-lg-3">Action</p>
                     </div>
@@ -75,7 +75,9 @@
                                 <input type="hidden" name="totalprice" value="{{totalprice}}">
                                 <input type="hidden" name="price" value="{{price}}">
                             </form>
+                            <form action="" method="POST">
                             <p class="amount text-muted">{{amount}}</p>
+                            </form>
                             <form action="" method="POST">
                                 <button id="btnSubmit" type="submit" class="btn">+</button>
                                 <input type="hidden" name="plus" value="plus">
@@ -130,7 +132,7 @@
                     <p class="col-sm-3" style="float: right;" id="gst"></p>
                 </div>
                 <hr size="12px" width="100%">
-                <label for="email"><b>Promotion: </b></label>
+                <label for="email"><b>Voucher: </b></label>
                 <form action="#" style="display: inline;">
                     <div class="form-group">
 
