newsletter to mailchimp api

--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -13,7 +13,7 @@
             <div class="col-lg-5 col-md-6">
                 <form class="form-row">
                     <div class="col-md-8 col-7">
-                        <input class="form-control border-0" placeholder="Your Email" type="email">
+                        <input class="form-control border-0" placeholder="Your Email" type="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                     </div> <!-- col.// -->
                     <div class="col-md-4 col-5">
                         <button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
